argocd/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
spec:
  type: LoadBalancer
  ports:
  - name: http
    nodePort: 30784
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    nodePort: 30649
    port: 443
    protocol: TCP
    targetPort: 8080
